--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
   margin: 0 auto;
 
   &.rotating-plane {
+    background-color: #333;
     -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
     animation: sk-rotateplane 1.2s infinite ease-in-out;
   }
@@ -108,6 +109,7 @@
   }
   &.bounce {
     text-align: center;
+    width: 70px;
     div {
       width: 18px;
       height: 18px;
